--- a/connection.html
+++ b/connection.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css/style.css" rel="stylesheet">
   <title>CREATIME</title>
 </head>
 <body>
-  <main>
-    <div class="container">
+  <header></header>
+
+  <main class="page-techer">
+    <div class="container  width">
 
       <section class="breadcrumb">
         <ul class="breadcramb__list">
@@ -126,5 +129,7 @@
 
     </div>
   </main>
+
+  <footer></footer>
 </body>
 </html>
