стили шапки контента+разобралась с browser-sync

--- a/connection.html
+++ b/connection.html
@@ -10,25 +10,30 @@
   <header></header>
 
   <main class="page-techer">
-    <div class="container  width">
+    <div class="width">
 
       <section class="breadcrumb">
-        <ul class="breadcramb__list">
+        <ul class="breadcrumb__list">
           <li class="breadcrumb__item">
-            <a href="index.html" class="breadcrumb__link">Главаная</a>
+            <a href="index.html" class="breadcrumb__link">Главная</a>
           </li>
-          <li class="breadcrumb__item">
+          <li class="breadcrumb__item  breadcrumb__item--last">
             <a class="breadcrumb__link  breadcrumb__link--active">Доска знакомств</a>
           </li>
         </ul>
       </section>
 
-      <h2 class="page-title">Сертифицированные ТРИЗ педагоги</h2>
+      <h2 class="page-techer__title">Сертифицированные ТРИЗ педагоги</h2>
+    </div>
+
       <section class="documents">
-        <a href="#" class="documents__link">Положение о сертификации</a>
-        <a href="#" class="documents__link">Справка о сертификации</a>
+        <div class="width">
+          <a href="#" class="documents__link">Положение о сертификации</a>
+          <a href="#" class="documents__link">Справка о сертификации</a>
+        </div>
       </section>
 
+    <div class="width">
       <aside class="filter">
         <form class="filter__form" method="get" action="#">
           <ul class="filter__list">
@@ -60,7 +65,7 @@
         <ul class="content__catalog">
           <li class="content__item  teacher">
             <div class="teacher__foto">
-              <img src="" width="131" height="131" alt="Анастасия Евгеньевна Смирнова">
+              <img src="img/foto-1.png" width="131" height="131" alt="Анастасия Евгеньевна Смирнова">
             </div>
             <section class="teacher__info">
               <h3 class="teacher__name">Анастасия Евгеньевна Смирнова </h3>
@@ -81,7 +86,7 @@
           </li>
           <li class="content__item  teacher">
             <div class="teacher__foto">
-              <img src="" width="131" height="131" alt="Анастасия Анатольевна Белозерова">
+              <img src="img/foto-2.png" width="131" height="131" alt="Анастасия Анатольевна Белозерова">
             </div>
             <section class="teacher__info">
               <h3 class="teacher__name">Анастасия Анатольевна Белозерова</h3>
@@ -106,7 +111,7 @@
           </li>
           <li class="content__item  teacher">
             <div class="teacher__foto">
-              <img src="" width="131" height="131" alt="Анастасия Ивановна Константинопольская">
+              <img src="img/foto-3.png" width="131" height="131" alt="Анастасия Ивановна Константинопольская">
             </div>
             <section class="teacher__info">
               <h3 class="teacher__name">Анастасия Ивановна Константинопольская</h3>
