стили для десктопа

--- a/connection.html
+++ b/connection.html
@@ -33,7 +33,7 @@
         </div>
       </section>
 
-    <div class="width">
+    <div class="width clearfix">
       <aside class="filter">
         <form class="filter__form" method="get" action="#">
           <ul class="filter__list">
@@ -51,7 +51,7 @@
             </li>
             <li class="filter__item">
               <label for="qualification">Квалификация</label>
-              <select name="qualification" id="qualification">
+              <select name="qualification" id="qualification" class="filter__item-select  filter__item-select--arrow">
                 <option value="Юриспруденция">Юриспруденция</option>
                 <option value="">Второй пункт</option>
               </select>
@@ -63,68 +63,69 @@
 
       <section class="content">
         <ul class="content__catalog">
-          <li class="content__item  teacher">
+          <li class="content__item  teacher  clearfix">
             <div class="teacher__foto">
               <img src="img/foto-1.png" width="131" height="131" alt="Анастасия Евгеньевна Смирнова">
             </div>
             <section class="teacher__info">
               <h3 class="teacher__name">Анастасия Евгеньевна Смирнова </h3>
-              <p class="teacher__adress">Россия, Санкт-Петербург <span class="teacher__email">email скрыт</span>
-              <span class="teacher__emailteacher__email--opened">nastya@mail.ru</span>
+              <p class="teacher__adress">Россия, Санкт-Петербург
+              <a href="mailto:nastya@mail.ru" class="teacher__email  teacher__email--opened">nastya@mail.ru</a>
               </p>
-              <table class="teacher__info">
+              <table class="teacher__about">
                 <tr>
-                  <td>Проф. область:</td>
-                  <td>Юриспруденция</td>
+                  <td class="teacher__about-cell  teacher__about-cell--bold">Проф. область:</td>
+                  <td class="teacher__about-cell">Юриспруденция</td>
                 </tr>
                 <tr>
-                  <td>Специализация:</td>
-                  <td>Аналитик</td>
+                  <td class="teacher__about-cell  teacher__about-cell--bold">Специализация:</td>
+                  <td class="teacher__about-cell">Аналитик</td>
                 </tr>
               </table>
             </section>
           </li>
-          <li class="content__item  teacher">
+          <li class="content__item  teacher  clearfix">
             <div class="teacher__foto">
               <img src="img/foto-2.png" width="131" height="131" alt="Анастасия Анатольевна Белозерова">
             </div>
             <section class="teacher__info">
               <h3 class="teacher__name">Анастасия Анатольевна Белозерова</h3>
-              <p class="teacher__adress">Россия, Санкт-Петербург <span class="teacher__email">email скрыт</span>
-              <span class="teacher__emailteacher__email--opened">nastyabel@gmail.com</span>
+              <p class="teacher__adress">Россия, Санкт-Петербург
+              <a href="mailto:nastyabel@gmail.com" class="teacher__email  teacher__email--opened">nastyabel@gmail.com</a>
               </p>
-              <table class="teacher__info">
+              <table class="teacher__about">
                   <tr>
-                    <td>Проф. область:</td>
-                    <td>Юриспруденция</td>
+                    <td class="teacher__about-cell  teacher__about-cell--bold">Проф. область:</td>
+                    <td class="teacher__about-cell">Юриспруденция</td>
                   </tr>
                   <tr>
-                    <td>Специализация:</td>
-                    <td>Юрисконсульт</td>
+                    <td class="teacher__about-cell  teacher__about-cell--bold">Специализация:</td>
+                    <td class="teacher__about-cell">Юрисконсульт</td>
                   </tr>
                   <tr>
-                    <td>О себе:</td>
-                    <td>Люблю изучать и систематизировать информацию, выявлять скрытые закономерности</td>
+                    <td class="teacher__about-cell  teacher__about-cell--bold">О себе:</td>
+                    <td class="teacher__about-cell">Люблю изучать и систематизировать информацию, выявлять скрытые закономерности</td>
                   </tr>
                 </table>
             </section>
           </li>
-          <li class="content__item  teacher">
+          <li class="content__item  teacher  clearfix">
             <div class="teacher__foto">
               <img src="img/foto-3.png" width="131" height="131" alt="Анастасия Ивановна Константинопольская">
             </div>
             <section class="teacher__info">
               <h3 class="teacher__name">Анастасия Ивановна Константинопольская</h3>
-              <p class="teacher__adress">Россия, Санкт-Петербург <span class="teacher__email">email скрыт <i class="teacher__email-tooltip"  data-title="чтобы увидеть контактный email — водите или зарегистрируйтесь"></i></span>
+              <p class="teacher__adress">Россия, Санкт-Петербург
+                <a class="teacher__email  teacher__email--tooltip" data-title="Чтобы увидеть контактный email — водите или зарегистрируйтесь">email скрыт </a>
               </p>
-              <table class="teacher__info">
+              <table class="teacher__about">
                   <tr>
-                    <td>Проф. область:</td>
-                    <td>Юриспруденция</td>
+                    <td class="teacher__about-cell  teacher__about-cell--bold">Проф. область:</td>
+                    <td class="teacher__about-cell">Юриспруденция</td>
                   </tr>
                   <tr>
-                    <td>Специализация:</td>
-                    <td>Договорное право</td>
+                    <td class="teacher__about-cell  teacher__about-cell--bold">Специализация:</td>
+                    <td class="teacher__about-cell">Договорное право</td>
                   </trd
                 </table>
             </section>
