поправила tooltip, добавила адаптив

--- a/connection.html
+++ b/connection.html
@@ -26,17 +26,17 @@
       <h2 class="page-techer__title">Сертифицированные ТРИЗ педагоги</h2>
     </div>
 
-      <section class="documents">
-        <div class="width">
-          <a href="#" class="documents__link">Положение о сертификации</a>
-          <a href="#" class="documents__link">Справка о сертификации</a>
-        </div>
-      </section>
+    <section class="documents">
+      <div class="width">
+        <a href="#" class="documents__link">Положение о сертификации</a>
+        <a href="#" class="documents__link">Справка о сертификации</a>
+      </div>
+    </section>
 
     <div class="width clearfix">
       <aside class="filter">
         <form class="filter__form" method="get" action="#">
-          <ul class="filter__list">
+          <ul class="filter__list  clearfix">
             <li class="filter__item">
               <label for="name">ФИО </label>
               <input type="text" name="name-field" id="name" placeholder="Анастасия">
@@ -116,7 +116,7 @@
             <section class="teacher__info">
               <h3 class="teacher__name">Анастасия Ивановна Константинопольская</h3>
               <p class="teacher__adress">Россия, Санкт-Петербург
-                <a class="teacher__email  teacher__email--tooltip" data-title="Чтобы увидеть контактный email — водите или зарегистрируйтесь">email скрыт </a>
+                <a class="teacher__email">email скрыт<i class="teacher__email  teacher__email-tooltip" data-title="Чтобы увидеть контактный email — водите или зарегистрируйтесь"></i></a>
               </p>
               <table class="teacher__about">
                   <tr>
